feat: upgrade long-term memory retrieval and updates